# bench

./: .gitignore  Cargo.toml  README.md  no-wasm.txt  prepare.sh  test.sh  with-wasm.txt
results/: rustc.txt  rustc_cranelift.txt  wasm_cranelift.txt
src/: compute.py  main.rs
