[package]
name = "cranelift-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
# sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
